--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <img src="assets/blacklogo.png" alt="Mark Daniel Saddlery" class="preloader-logo">
   </div>
 
-  <!-- FOOTER -->
+  <!-- HEADER -->
 
   <div id="header-placeholder"></div>
 
