--- a/cart.html
+++ b/cart.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Your Cart | Mark Daniel Saddlery</title>
@@ -8,56 +9,77 @@
   <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/cart.css">
   <link rel="stylesheet" href="css/header.css">
+  <link rel="stylesheet" href="css/footer.css">
   <link rel="stylesheet" href="css/preloader.css">
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 </head>
 
 <body>
 
-<!-- PRELOADER -->
-<div id="preloader">
-  <img src="assets/blacklogo.png" alt="Mark Daniel Saddlery" class="preloader-logo">
-</div>
+  <!---------------------------------------------------->
 
-<!-- ✅ REQUIRED FOR GLOBAL HEADER -->
-<div id="header-placeholder"></div>
+  <!-- PRELOADER -->
 
-<!-- CART -->
-<div id="cart-container" class="cart-container"></div>
+  <div id="preloader">
+    <img src="assets/blacklogo.png" alt="Mark Daniel Saddlery" class="preloader-logo">
+  </div>
 
-<div class="coupon-box">
+  <!-- HEADER -->
+
+  <div id="header-placeholder"></div>
+
+  <!---------------------------------------------------->
+
+  <!-- CART -->
+
+  <div id="cart-container" class="cart-container"></div>
+  <h3 class="coupon-title">Available Privileges</h3>
+  <div class="available-coupons" id="available-coupons"></div>
+  <div class="coupon-box">
   <input type="text" id="coupon-input" placeholder="Enter coupon code">
   <button id="apply-coupon-btn">Apply</button>
-</div>
+  </div>
 
 <div id="coupon-message" class="coupon-message"></div>
 <div id="grand-total" class="grand-total"></div>
 
 <button id="checkout-btn">Pay Now</button>
 
-<!-- GLOBAL HEADER LOADER -->
-<script>
+<!---------------------------------------------------->
+
+<!-- FOOTER -->
+
+  <div id="footer-placeholder"></div>
+
+<!---------------------------------------------------->
+
+   <script>
   fetch('header.html')
     .then(res => res.text())
     .then(data => {
       document.getElementById('header-placeholder').innerHTML = data;
-
       const header = document.querySelector('.site-header');
       window.addEventListener('scroll', () => {
         header.classList.toggle('scrolled', window.scrollY > 40);
       });
-
       const script = document.createElement('script');
       script.src = 'js/header.js';
       document.body.appendChild(script);
     });
-</script>
+  </script>
 
-<!-- CORE SCRIPTS -->
+    <script>
+  fetch('footer.html')
+  .then(res => res.text())
+  .then(data => {
+    document.getElementById('footer-placeholder').innerHTML = data;
+   });
+  </script>
+
 <script src="js/config.js"></script>
-<script src="js/cart.js"></script> <!-- ✅ THIS WAS MISSING -->
-<script src="js/preloader.js"></script>
+<script defer src="js/cart.js"></script>
+<script defer src="js/preloader.js"></script>
 
 </body>
 </html>
