--- a/home.html
+++ b/home.html
@@ -91,8 +91,8 @@
   </script>
 
 <script src="js/config.js"></script>
-<script src="js/home.js"></script>
 <script src="js/preloader.js"></script>
+<script defer src="js/home.js"></script>
 
 </body>
 </html>
