--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 <!-- EDITORIAL ICONS -->
 
 <section class="editorial-stack">
-  <img src="assets/background.jpg" class="editorial-bg" alt="">
+  <img src="assets/background1.jpg" class="editorial-bg" alt="">
 
   <div class="editorial-strip">
     <img src="assets/icon1.jpg" />
@@ -163,8 +163,9 @@
    });
   </script>
 
-  <script src="js/index.js"></script>
-  <script src="js/preloader.js"></script>
+<script src="js/config.js"></script>
+<script defer src="js/index.js"></script>
+<script src="js/preloader.js"></script>
 
 </body>
 </html>
