--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -1,27 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Admin Dashboard | Mark Daniel Saddlery</title>
 
   <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/admin-dashboard.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/header.css">
+  <link rel="stylesheet" href="css/footer.css">
+  <link rel="stylesheet" href="css/preloader.css" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 </head>
 
 <body>
-<!-- SIDEBAR -->
-<div class="sidebar">
+
+  <!---------------------------------------------------->
+
+  <!-- PRELOADER -->
+
+  <div id="preloader">
+    <img src="assets/blacklogo.png" alt="Mark Daniel Saddlery" class="preloader-logo">
+  </div>
+
+  <!-- HEADER -->
+
+  <div id="header-placeholder"></div>
+
+  <!---------------------------------------------------->
+
+  <!-- DASHBOARD -->
+
+  <div class="sidebar">
   <div>
     <h2>ADMIN</h2>
   </div>
   <button class="logout-btn" onclick="logout()">Logout</button>
-</div>
+ </div>
 
-<!-- MAIN -->
-<div class="main">
+  <!-- MAIN -->
+  <div class="main">
   <h1>MARK DANIEL SADDLERY</h1>
 
   <!-- PRODUCT FORM -->
@@ -74,8 +94,40 @@
   </div>
 </div>
 
+<!---------------------------------------------------->
+
+  <!-- FOOTER -->
+
+  <div id="footer-placeholder"></div>
+
+  <!---------------------------------------------------->
+
+   <script>
+  fetch('header.html')
+    .then(res => res.text())
+    .then(data => {
+      document.getElementById('header-placeholder').innerHTML = data;
+      const header = document.querySelector('.site-header');
+      window.addEventListener('scroll', () => {
+        header.classList.toggle('scrolled', window.scrollY > 40);
+      });
+      const script = document.createElement('script');
+      script.src = 'js/header.js';
+      document.body.appendChild(script);
+    });
+  </script>
+
+    <script>
+  fetch('footer.html')
+  .then(res => res.text())
+  .then(data => {
+    document.getElementById('footer-placeholder').innerHTML = data;
+   });
+  </script>
+
 <script src="js/config.js"></script>
 <script src="js/admin-dashboard.js"></script>
+<script src="js/preloader.js"></script>
 
 </body>
 </html>
