--- a/admin-login.html
+++ b/admin-login.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
   <meta charset="UTF-8">
   <title>Admin Login | Mark Daniel Saddlery</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,20 +9,33 @@
    <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
    <link rel="stylesheet" href="css/admin-login.css" />
    <link rel="stylesheet" href="css/header.css">
+   <link rel="stylesheet" href="css/footer.css">
    <link rel="stylesheet" href="css/preloader.css" />
-   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 </head>
 
 <body>
 
-     <div id="preloader">
-  <img src="assets/blacklogo.png" alt="Mark Daniel Saddlery" class="preloader-logo">
+  <!---------------------------------------------------->
+
+  <!-- PRELOADER -->
+
+  <div id="preloader">
+    <img src="assets/blacklogo.png" alt="Mark Daniel Saddlery" class="preloader-logo">
   </div>
 
+  <!-- HEADER -->
+
+  <div id="header-placeholder"></div>
+
+  <!---------------------------------------------------->
+
+  <!-- LOG IN -->
+
   <div class="login-container">
-    <div class="brand">MARK DANIEL</div>
-    <div class="brand-sub">S A D D L E R Y</div>
+  <div class="brand">MARK DANIEL</div>
+  <div class="brand-sub">S A D D L E R Y</div>
 
     <h1>Admin Access</h1>
 
@@ -35,6 +49,37 @@
 
     <div class="footer-text">AUTHORIZED PERSONNEL ONLY</div>
   </div>
+
+  <!---------------------------------------------------->
+
+  <!-- FOOTER -->
+
+  <div id="footer-placeholder"></div>
+
+  <!---------------------------------------------------->
+
+   <script>
+  fetch('header.html')
+    .then(res => res.text())
+    .then(data => {
+      document.getElementById('header-placeholder').innerHTML = data;
+      const header = document.querySelector('.site-header');
+      window.addEventListener('scroll', () => {
+        header.classList.toggle('scrolled', window.scrollY > 40);
+      });
+      const script = document.createElement('script');
+      script.src = 'js/header.js';
+      document.body.appendChild(script);
+    });
+  </script>
+
+    <script>
+  fetch('footer.html')
+  .then(res => res.text())
+  .then(data => {
+    document.getElementById('footer-placeholder').innerHTML = data;
+   });
+  </script>
 
   <script src="js/config.js"></script>
   <script src="js/preloader.js"></script>
