--- a/checkout.html
+++ b/checkout.html
@@ -1,53 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
   <meta charset="UTF-8" />
   <title>Checkout | Mark Daniel Saddlery</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-  <!-- ✅ PAYPAL SDK (REQUIRED) -->
   <script src="https://www.paypal.com/sdk/js?client-id=AdSToXRolxhCYg3hiXVNlawTSeWdco6d_LWMk3HUnN8hDGE2HFong_D758R8Y2i0d8ikXCaJ2dbI0wA-&currency=USD"></script>
 
   <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/checkout.css" />
   <link rel="stylesheet" href="css/header.css">
+  <link rel="stylesheet" href="css/footer.css">
   <link rel="stylesheet" href="css/preloader.css" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 </head>
 
 <body>
 
-<!-- PRELOADER -->
-<div id="preloader">
-  <img src="assets/blacklogo.png" alt="Mark Daniel Saddlery" class="preloader-logo">
-</div>
+  <!---------------------------------------------------->
 
-<!-- ✅ REQUIRED FOR GLOBAL HEADER -->
-<div id="header-placeholder"></div>
+  <!-- PRELOADER -->
 
-<!-- CHECKOUT -->
-<div class="checkout-container">
-  <h1>CHECKOUT</h1>
+  <div id="preloader">
+    <img src="assets/blacklogo.png" alt="Mark Daniel Saddlery" class="preloader-logo">
+  </div>
 
-  <form id="checkout-form">
-    <input type="text" id="name" placeholder="Name" required />
-    <input type="email" id="email" placeholder="Email" required />
-    <input type="tel" id="phone" placeholder="Phone Number" required />
-    <textarea id="address" placeholder="Address" required></textarea>
+  <!-- HEADER -->
 
-    <div id="cart-summary">
-      <h2>Cart Summary</h2>
+  <div id="header-placeholder"></div>
+
+  <!---------------------------------------------------->
+
+  <!-- CHECK OUT -->
+
+  <div class="checkout-container">
+
+  <div class="checkout-wrapper">
+
+    <!-- LEFT : CUSTOMER DETAILS -->
+    <section class="checkout-left">
+
+      <h1>Checkout</h1>
+
+      <!-- CONTACT (LOCKED DETAILS) -->
+      <div class="checkout-block">
+        <h2>Contact</h2>
+
+        <div class="static-field">
+          <span>Name</span>
+          <p id="name"></p>
+        </div>
+
+        <div class="static-field">
+          <span>Email</span>
+          <p id="email"></p>
+        </div>
+
+        <div class="static-field">
+          <span>Phone</span>
+          <p id="phone"></p>
+        </div>
+      </div>
+
+      <!-- ADDRESS (ONLY EDITABLE FIELD) -->
+      <div class="checkout-block">
+        <h2>Shipping Address</h2>
+        <textarea
+          id="address"
+          placeholder="Enter your complete delivery address"
+          required
+        ></textarea>
+      </div>
+
+    </section>
+
+    <!-- RIGHT : ORDER SUMMARY -->
+    <aside class="checkout-right">
+
+      <h2>Order Summary</h2>
+
       <ul id="cart-items"></ul>
-      <p><strong>Total:</strong> $<span id="total-amount">0</span></p>
-    </div>
 
-    <!-- PAYPAL -->
-    <div id="paypal-button-container"></div>
-  </form>
+      <div class="summary-row total">
+        <span>Total</span>
+        <strong>$<span id="total-amount">0</span></strong>
+      </div>
+
+      <!-- PAYPAL -->
+      <div id="paypal-button-container"></div>
+
+    </aside>
+
+  </div>
+
 </div>
 
-<!-- HEADER LOADER -->
-<script>
+<!---------------------------------------------------->
+
+<!-- FOOTER -->
+
+  <div id="footer-placeholder"></div>
+
+<!---------------------------------------------------->
+
+   <script>
   fetch('header.html')
     .then(res => res.text())
     .then(data => {
@@ -60,7 +117,15 @@
       script.src = 'js/header.js';
       document.body.appendChild(script);
     });
-</script>
+  </script>
+
+    <script>
+  fetch('footer.html')
+  .then(res => res.text())
+  .then(data => {
+    document.getElementById('footer-placeholder').innerHTML = data;
+   });
+  </script>
 
 <script src="js/config.js"></script>
 <script src="js/preloader.js"></script>
