--- a/header.html
+++ b/header.html
@@ -25,7 +25,7 @@
 <aside id="sidebar">
   <nav class="sidebar-nav">
     <a href="home.html">Home</a>
-    <a href="login.html">Account</a>
+    <a href="#" id="account-link">Account</a>
     <a href="privacy.html">Privacy Policy</a>
     <a href="contact.html">Contact Us</a>
   </nav>
@@ -33,5 +33,4 @@
    <div class="sidebar-brand">
     cortex²
   </div>
-
 </aside>
