--- a/login.html
+++ b/login.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Login | Mark Daniel Saddlery</title>
@@ -8,19 +9,29 @@
   <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/login.css" />
   <link rel="stylesheet" href="css/header.css">
+  <link rel="stylesheet" href="css/footer.css">
   <link rel="stylesheet" href="css/preloader.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 </head>
 
 <body>
+
+  <!---------------------------------------------------->
+
+  <!-- PRELOADER -->
 
   <div id="preloader">
     <img src="assets/blacklogo.png" alt="Mark Daniel Saddlery" class="preloader-logo">
   </div>
 
+  <!-- HEADER -->
 
   <div id="header-placeholder"></div>
+
+  <!---------------------------------------------------->
+
+  <!-- LOG IN -->
 
   <main class="login-wrapper">
     <section class="login-card">
@@ -54,24 +65,40 @@
     </section>
   </main>
 
-  <script>
-    fetch('header.html')
-      .then(res => res.text())
-      .then(data => {
-        document.getElementById('header-placeholder').innerHTML = data;
-        const header = document.querySelector('.site-header');
-        window.addEventListener('scroll', () => {
-          header.classList.toggle('scrolled', window.scrollY > 40);
-        });
-        const script = document.createElement('script');
-        script.src = 'js/header.js';
-        document.body.appendChild(script);
+<!---------------------------------------------------->
+
+<!-- FOOTER -->
+
+  <div id="footer-placeholder"></div>
+
+<!---------------------------------------------------->
+
+   <script>
+  fetch('header.html')
+    .then(res => res.text())
+    .then(data => {
+      document.getElementById('header-placeholder').innerHTML = data;
+      const header = document.querySelector('.site-header');
+      window.addEventListener('scroll', () => {
+        header.classList.toggle('scrolled', window.scrollY > 40);
       });
+      const script = document.createElement('script');
+      script.src = 'js/header.js';
+      document.body.appendChild(script);
+    });
+  </script>
+
+    <script>
+  fetch('footer.html')
+  .then(res => res.text())
+  .then(data => {
+    document.getElementById('footer-placeholder').innerHTML = data;
+   });
   </script>
 
   <script src="js/config.js"></script>
-  <script src="js/preloader.js"></script>
   <script src="js/login.js"></script>
+  <script src="js/preloader.js"></script>
 
 </body>
 </html>
