--- a/privacy.html
+++ b/privacy.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
+    
   <meta charset="UTF-8" />
+  <title>Privacy Policy | Mark Daniel Saddlery</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Forgot Password | Mark Daniel Saddlery</title>
 
   <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="css/forgotpassword.css" />
+  <link rel="stylesheet" href="css/privacy.css">
   <link rel="stylesheet" href="css/header.css">
   <link rel="stylesheet" href="css/footer.css">
   <link rel="stylesheet" href="css/preloader.css" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 </head>
-
-<body>
 
   <!---------------------------------------------------->
 
@@ -31,31 +29,56 @@
 
   <!---------------------------------------------------->
 
-  <!-- FORGOT PASSWORD -->
+  <!-- PRIVACY POLICY -->
 
-  <main class="forgot-wrapper">
-    <section class="forgot-card">
-      <h1>Forgot Password</h1>
-      <p class="subtitle">
-        Enter your registered email address. We’ll send you an OTP to reset your password.
-      </p>
+<main class="policy-container">
 
-      <form id="forgotForm">
-        <div class="field">
-          <label>Email</label>
-          <input id="email" type="email" placeholder="Enter your email" />
-        </div>
-        <button type="submit" class="send-btn">SEND OTP</button>
-      </form>
+  <h1>Privacy Policy</h1>
+  <p class="updated">Last updated: January 2026</p>
 
-      <div id="formMessage" class="form-message"></div>
+  <section>
+    <p>
+      Mark Daniel Saddlery respects your privacy and is
+      committed to protecting your personal information. This Privacy Policy
+      explains how we collect, use, and safeguard your data when you visit or
+      make a purchase from our website.
+    </p>
+  </section>
 
-      <p class="back-link">
-        Remember your password?
-        <a href="login.html">Back to Sign in</a>
-      </p>
-    </section>
-  </main>
+  <section>
+    <h2>1. Information We Collect</h2>
+    <p>We may collect the following information:</p>
+    <ul>
+      <li>Name, email address, and phone number</li>
+      <li>Billing and shipping address</li>
+      <li>Order and payment details</li>
+      <li>Account login and authentication information</li>
+      <li>Device, browser, and usage data</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>2. How We Use Your Information</h2>
+    <p>Your information is used to:</p>
+    <ul>
+      <li>Process and fulfill orders</li>
+      <li>Verify user identity and prevent fraud</li>
+      <li>Communicate order updates and support requests</li>
+      <li>Improve our website and customer experience</li>
+      <li>Comply with legal and regulatory requirements</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>3. Payments</h2>
+    <p>
+      All payments are securely processed through trusted third-party
+      payment providers. We do not store or have access to your full payment
+      or card details.
+    </p>
+  </section>
+
+</main>
 
 <!---------------------------------------------------->
 
@@ -88,8 +111,6 @@
    });
   </script>
 
-  <script src="js/config.js"></script>
-  <script src="js/forgotpassword.js"></script>
   <script src="js/preloader.js"></script>
 
 </body>
