--- a/profile.html
+++ b/profile.html
@@ -8,17 +8,29 @@
   <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/profile.css" />
   <link rel="stylesheet" href="css/header.css">
+  <link rel="stylesheet" href="css/footer.css">
   <link rel="stylesheet" href="css/preloader.css" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 </head>
 
 <body>
+
+  <!---------------------------------------------------->
+
+  <!-- PRELOADER -->
 
   <div id="preloader">
     <img src="assets/blacklogo.png" alt="Mark Daniel Saddlery" class="preloader-logo">
   </div>
 
+  <!-- HEADER -->
+
   <div id="header-placeholder"></div>
+
+  <!---------------------------------------------------->
+
+  <!-- PROFILE -->
 
   <main class="profile-container">
 
@@ -75,24 +87,40 @@
 
   </main>
 
+<!---------------------------------------------------->
+
+<!-- FOOTER -->
+
+  <div id="footer-placeholder"></div>
+
+<!---------------------------------------------------->
+
   <script>
-    fetch('header.html')
-      .then(res => res.text())
-      .then(data => {
-        document.getElementById('header-placeholder').innerHTML = data;
-        const header = document.querySelector('.site-header');
-        window.addEventListener('scroll', () => {
-          header.classList.toggle('scrolled', window.scrollY > 40);
-        });
-        const script = document.createElement('script');
-        script.src = 'js/header.js';
-        document.body.appendChild(script);
+  fetch('header.html')
+    .then(res => res.text())
+    .then(data => {
+      document.getElementById('header-placeholder').innerHTML = data;
+      const header = document.querySelector('.site-header');
+      window.addEventListener('scroll', () => {
+        header.classList.toggle('scrolled', window.scrollY > 40);
       });
+      const script = document.createElement('script');
+      script.src = 'js/header.js';
+      document.body.appendChild(script);
+    });
+  </script>
+
+  <script>
+  fetch('footer.html')
+  .then(res => res.text())
+  .then(data => {
+    document.getElementById('footer-placeholder').innerHTML = data;
+   });
   </script>
 
   <script src="js/config.js"></script>
-  <script src="js/preloader.js"></script>
   <script src="js/profile.js"></script>
+  <script src="js/preloader.js"></script>
 
 </body>
 </html>
