--- a/signup.html
+++ b/signup.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
 
   <meta charset="UTF-8" />
@@ -10,18 +9,30 @@
    <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
    <link rel="stylesheet" href="css/signup.css" />
    <link rel="stylesheet" href="css/header.css">
+   <link rel="stylesheet" href="css/footer.css">
    <link rel="stylesheet" href="css/preloader.css" />
-   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 </head>
 
 <body>
 
+  <!---------------------------------------------------->
+
+  <!-- PRELOADER -->
+
   <div id="preloader">
-  <img src="assets/blacklogo.png" alt="Mark Daniel Saddlery" class="preloader-logo">
+    <img src="assets/blacklogo.png" alt="Mark Daniel Saddlery" class="preloader-logo">
   </div>
+
+  <!-- HEADER -->
+
   <div id="header-placeholder"></div>
+
+  <!---------------------------------------------------->
+
+  <!-- SIGN UP -->
+  
   <main class="signup-wrapper">
     <section class="signup-card">
       <h1>Create Account</h1>
@@ -60,7 +71,16 @@
     </section>
   </main>
 
-   <script>
+<!---------------------------------------------------->
+
+<!-- FOOTER -->
+
+  <div id="footer-placeholder"></div>
+
+<!---------------------------------------------------->
+
+
+  <script>
   fetch('header.html')
     .then(res => res.text())
     .then(data => {
@@ -75,9 +95,17 @@
     });
   </script>
 
+  <script>
+  fetch('footer.html')
+  .then(res => res.text())
+  .then(data => {
+    document.getElementById('footer-placeholder').innerHTML = data;
+   });
+  </script>
+
 <script src="js/config.js"></script>
-<script src="js/preloader.js"></script>
 <script src="js/signup.js"></script>
+<script src="js/preloader.js"></script>
 
 </body>
 </html>
