--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <div class="hero-overlay">
         <h1 class="hero-subtitle">CRAFTED FOR THE RIDE</h1>
         <h1 class="hero-title">MARK DANIEL SADDLERY</h1>
-         <a href="home.html" class="lux-btn">SHOP NOW</a>
+         <a href="home.html" class="lux-btn1">SHOP NOW</a>
       </div>
 
     </div>
