--- a/home.html
+++ b/home.html
@@ -54,9 +54,44 @@
 
 <!-- PRODUCTS -->
 
-<section id="products-section">
-  <h2 class="section-title">The Essential Collection</h2>
-  <div id="product-container" class="product-grid"></div>
+<section class="products-section">
+
+  <!-- Breezing -->
+  <section class="category-section">
+    <h2 class="section-title">Breezing Collection</h2>
+    <div class="product-grid" id="breezing-products"></div>
+  </section>
+
+  <!-- Racing -->
+  <section class="category-section">
+    <h2 class="section-title">Racing Collection</h2>
+    <div class="product-grid" id="racing-products"></div>
+  </section>
+
+  <!-- Galloping -->
+  <section class="category-section">
+    <h2 class="section-title">Galloping Collection</h2>
+    <div class="product-grid" id="galloping-products"></div>
+  </section>
+
+  <!-- Paddock -->
+  <section class="category-section">
+    <h2 class="section-title">Paddock Collection</h2>
+    <div class="product-grid" id="paddock-products"></div>
+  </section>
+
+  <!-- Saddles -->
+  <section class="category-section">
+    <h2 class="section-title">Saddles</h2>
+    <div class="product-grid" id="saddles-products"></div>
+  </section>
+
+  <!-- Blankets -->
+  <section class="category-section">
+    <h2 class="section-title">Blankets</h2>
+    <div class="product-grid" id="blankets-products"></div>
+  </section>
+
 </section>
 
 <!---------------------------------------------------->
