--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -53,12 +53,12 @@
       <div class="form-group"><input id="discounted_price" type="number" placeholder="Discounted Price"></div>
       <select id="category" required>
       <option value="">Select Category</option>
-      <option value="breezing">Breezing Collection</option>
-      <option value="racing">Racing Collection</option>
-      <option value="galloping">Galloping Collection</option>
-      <option value="paddock">Paddock Collection</option>
-      <option value="saddles">Saddles</option>
-      <option value="blankets">Blankets</option>
+      <option value="galloping">The Galloping Collection</option>
+      <option value="racing">The Racing Collection</option>
+      <option value="galloping">The Racing Collection</option>
+      <option value="paddock">The Paddock Collection</option>
+      <option value="saddles">The Saddle Collection</option>
+      <option value="blankets">The Blanket Collection</option>
       </select>
       <div class="form-group"><input id="description" placeholder="Description"></div>
       <div class="form-group"><input id="image" placeholder="Main Image URL"></div>
