--- a/home.html
+++ b/home.html
@@ -58,37 +58,43 @@
 
   <!-- Breezing -->
   <section class="category-section">
-    <h2 class="section-title">Breezing Collection</h2>
-    <div class="product-grid" id="breezing-products"></div>
+    <h2 class="section-title">The Galloping Collection</h2>
+    <p class="section-subtitle">Built for power, endurance, and daily high-speed training</p>
+    <div class="product-grid" id="galloping-products"></div>
   </section>
 
   <!-- Racing -->
   <section class="category-section">
-    <h2 class="section-title">Racing Collection</h2>
+    <h2 class="section-title">The Racing Collection</h2>
+    <p class="section-subtitle">Elite boots designed for maximum speed and competition</p>
     <div class="product-grid" id="racing-products"></div>
   </section>
 
   <!-- Galloping -->
   <section class="category-section">
-    <h2 class="section-title">Galloping Collection</h2>
-    <div class="product-grid" id="galloping-products"></div>
+    <h2 class="section-title">The Breezing Collection</h2>
+     <p class="section-subtitle">Precision boots for breezing and pre-race conditioning</p>
+    <div class="product-grid" id="breezing-products"></div>
   </section>
 
   <!-- Paddock -->
   <section class="category-section">
-    <h2 class="section-title">Paddock Collection</h2>
+    <h2 class="section-title">The Paddock Collection</h2>
+    <p class="section-subtitle">Designed for the paddock, the barn, and beyond</p>
     <div class="product-grid" id="paddock-products"></div>
   </section>
 
   <!-- Saddles -->
   <section class="category-section">
-    <h2 class="section-title">Saddles</h2>
+    <h2 class="section-title">The Saddle Collection</h2>
+    <p class="section-subtitle">Handcrafted saddles shaped for balance, control, and comfort</p>
     <div class="product-grid" id="saddles-products"></div>
   </section>
 
   <!-- Blankets -->
   <section class="category-section">
-    <h2 class="section-title">Blankets</h2>
+    <h2 class="section-title">The Blanket Collection</h2>
+    <p class="section-subtitle">Crafted to shield your horse in every condition</p>
     <div class="product-grid" id="blankets-products"></div>
   </section>
 
