--- a/home.html
+++ b/home.html
@@ -36,11 +36,11 @@
 <section class="hero-editorial">
 
   <div class="hero-outline">
-    EQUESTRIAN
+    SADDLERY
   </div>
 
   <div class="hero-copy">
-    <span class="hero-eyebrow">EQUESTRIAN HOUSE</span>
+    <span class="hero-eyebrow">THE SADDLERY HOUSE</span>
     <h2>Handcrafted for the Ride</h2>
   </div>
 
