--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -55,7 +55,7 @@
       <option value="">Select Category</option>
       <option value="galloping">The Galloping Collection</option>
       <option value="racing">The Racing Collection</option>
-      <option value="galloping">The Racing Collection</option>
+      <option value="breezing">The Breezing Collection</option>
       <option value="paddock">The Paddock Collection</option>
       <option value="saddles">The Saddle Collection</option>
       <option value="blankets">The Blanket Collection</option>
