--- a/html/footer.html
+++ b/html/footer.html
@@ -3,7 +3,7 @@
 
     <div class="footer-brand">
 
-      <img src="assets/logo.png" alt="Mark Daniel Saddlery Logo" class="footer-logo-img">
+      <img src="/assets/logo.png" alt="Mark Daniel Saddlery Logo" class="footer-logo-img">
 
       <span class="footer-logo">MARK DANIEL SADDLERY</span>
       <p class="footer-tagline">Crafted for the Ride</p>
@@ -16,9 +16,9 @@
     </div>
 
     <div class="footer-links">
-      <a href="home.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="contact.html">Contact</a>
+      <a href="/html/home.html">Home</a>
+      <a href="/html/about.html">About</a>
+      <a href="/html/contact.html">Contact</a>
     </div>
 
     <div class="footer-copy">
