--- a/html/header.html
+++ b/html/header.html
@@ -6,7 +6,7 @@
     </div>
 
     <div class="logo-wrap">
-      <img src="assets/logo.png" alt="Mark Daniel Saddlery" class="brand-logo">
+      <img src="/assets/logo.png" alt="Mark Daniel Saddlery" class="brand-logo">
     </div>
 
     <div class="brand-center">
@@ -24,10 +24,10 @@
 
 <aside id="sidebar">
   <nav class="sidebar-nav">
-    <a href="home.html">Home</a>
+    <a href="/html/home.html">Home</a>
     <a href="#" id="account-link">Account</a>
-    <a href="privacy.html">Privacy Policy</a>
-    <a href="contact.html">Contact Us</a>
+    <a href="/html/privacy.html">Privacy Policy</a>
+    <a href="/html/contact.html">Contact Us</a>
   </nav>
 
    <div class="sidebar-brand">
