--- a/html/admin-dashboard.html
+++ b/html/admin-dashboard.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Admin Dashboard | Mark Daniel Saddlery</title>
 
-  <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="css/admin-dashboard.css" />
-  <link rel="stylesheet" href="css/preloader.css" />
+  <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="/css/admin-dashboard.css" />
+  <link rel="stylesheet" href="/css/preloader.css" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 </head>
@@ -20,7 +20,7 @@
   <!-- PRELOADER -->
 
   <div id="preloader">
-    <img src="assets/blacklogo.png" alt="Mark Daniel Saddlery" class="preloader-logo">
+    <img src="/assets/blacklogo.png" alt="Mark Daniel Saddlery" class="preloader-logo">
   </div>
 
   <!-- HEADER -->
@@ -101,9 +101,9 @@
 
   <!---------------------------------------------------->
 
-<script src="js/config.js"></script>
-<script src="js/admin-dashboard.js"></script>
-<script src="js/preloader.js"></script>
+<script src="/js/config.js"></script>
+<script src="/js/admin-dashboard.js"></script>
+<script src="/js/preloader.js"></script>
 
 </body>
 </html>
