--- a/html/admin-login.html
+++ b/html/admin-login.html
@@ -6,9 +6,9 @@
   <title>Admin Login | Mark Daniel Saddlery</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-   <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
-   <link rel="stylesheet" href="css/admin-login.css" />
-   <link rel="stylesheet" href="css/preloader.css" />
+   <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
+   <link rel="stylesheet" href="/css/admin-login.css" />
+   <link rel="stylesheet" href="/css/preloader.css" />
    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 </head>
@@ -20,7 +20,7 @@
   <!-- PRELOADER -->
 
   <div id="preloader">
-    <img src="assets/blacklogo.png" alt="Mark Daniel Saddlery" class="preloader-logo">
+    <img src="/assets/blacklogo.png" alt="Mark Daniel Saddlery" class="preloader-logo">
   </div>
 
   <!-- HEADER -->
@@ -50,9 +50,9 @@
 
   <!---------------------------------------------------->
 
-  <script src="js/config.js"></script>
-  <script src="js/preloader.js"></script>
-  <script src="js/admin-login.js"></script>
+  <script src="/js/config.js"></script>
+  <script src="/js/preloader.js"></script>
+  <script src="/js/admin-login.js"></script>
   
 </body>
 </html>
