--- a/html/reset-password.html
+++ b/html/reset-password.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
+  
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Forgot Password | Mark Daniel Saddlery</title>
+  <title>Reset Password | Mark Daniel Saddlery</title>
 
   <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="css/forgotpassword.css" />
-  <link rel="stylesheet" href="css/header.css">
-  <link rel="stylesheet" href="css/footer.css">
-  <link rel="stylesheet" href="css/preloader.css" />
+  <link rel="stylesheet" href="/css/reset-password.css" />
+  <link rel="stylesheet" href="/css/header.css">
+  <link rel="stylesheet" href="/css/footer.css">
+  <link rel="stylesheet" href="/css/preloader.css" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 </head>
@@ -22,7 +22,7 @@
   <!-- PRELOADER -->
 
   <div id="preloader">
-    <img src="assets/blacklogo.png" alt="Mark Daniel Saddlery" class="preloader-logo">
+    <img src="/assets/blacklogo.png" alt="Mark Daniel Saddlery" class="preloader-logo">
   </div>
 
   <!-- HEADER -->
@@ -31,29 +31,30 @@
 
   <!---------------------------------------------------->
 
-  <!-- FORGOT PASSWORD -->
+  <!-- PASSWORD RESET -->
 
-  <main class="forgot-wrapper">
-    <section class="forgot-card">
-      <h1>Forgot Password</h1>
+  <main class="reset-wrapper">
+    <section class="reset-card">
+      <h1>Reset Password</h1>
       <p class="subtitle">
-        Enter your registered email address. We’ll send you an OTP to reset your password.
+        Create a new password for your account.
       </p>
 
-      <form id="forgotForm">
+      <form id="resetForm">
         <div class="field">
-          <label>Email</label>
-          <input id="email" type="email" placeholder="Enter your email" />
+          <label>New Password</label>
+          <input id="password" type="password" placeholder="Enter new password">
         </div>
-        <button type="submit" class="send-btn">SEND OTP</button>
+
+        <div class="field">
+          <label>Confirm Password</label>
+          <input id="confirmPassword" type="password" placeholder="Re-enter new password">
+        </div>
+
+        <button type="submit" class="reset-btn">UPDATE PASSWORD</button>
       </form>
 
       <div id="formMessage" class="form-message"></div>
-
-      <p class="back-link">
-        Remember your password?
-        <a href="login.html">Back to Sign in</a>
-      </p>
     </section>
   </main>
 
@@ -65,8 +66,8 @@
 
 <!---------------------------------------------------->
 
-   <script>
-  fetch('header.html')
+  <script>
+  fetch('/html/header.html')
     .then(res => res.text())
     .then(data => {
       document.getElementById('header-placeholder').innerHTML = data;
@@ -75,22 +76,22 @@
         header.classList.toggle('scrolled', window.scrollY > 40);
       });
       const script = document.createElement('script');
-      script.src = 'js/header.js';
+      script.src = '/js/header.js';
       document.body.appendChild(script);
     });
   </script>
 
-    <script>
-  fetch('footer.html')
+  <script>
+  fetch('/html/footer.html')
   .then(res => res.text())
   .then(data => {
     document.getElementById('footer-placeholder').innerHTML = data;
    });
   </script>
 
-  <script src="js/config.js"></script>
-  <script src="js/forgotpassword.js"></script>
-  <script src="js/preloader.js"></script>
+  <script src="/js/config.js"></script>
+  <script src="/js/reset-password.js"></script>
+  <script src="/js/preloader.js"></script>
 
 </body>
 </html>
