--- a/html/product.html
+++ b/html/product.html
@@ -52,6 +52,23 @@
   </p>
 </div>
 
+  <!-- Custom Fit Note -->
+<div class="custom-fit-section">
+  <p class="custom-fit-title">Custom Fit Notes (Optional)</p>
+
+<textarea
+  id="custom-fit-text"
+  placeholder="Mention any foot issues, size variations, comfort preferences, etc."
+  rows="4"></textarea>
+
+  <label class="custom-fit-upload">
+    Upload reference image (optional)
+    <input type="file" id="custom-fit-image" accept="image/*" hidden />
+  </label>
+
+<p id="custom-fit-status" class="custom-fit-status"></p>
+</div>
+
   <button class="add-to-cart">Add to Cart</button>
 
   <!-- Concierge note -->
