--- a/html/profile.html
+++ b/html/profile.html
@@ -111,7 +111,7 @@
   </script>
 
   <script>
-  fetch('html/footer.html')
+  fetch('/html/footer.html')
   .then(res => res.text())
   .then(data => {
     document.getElementById('footer-placeholder').innerHTML = data;
