--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </div>
   </section>
 
-<!-- SLIDER -->
+<!-- SLIDER 1 -->
 
 <section class="stack banner-slider">
   <div class="slides">
@@ -106,6 +106,42 @@
   <button class="nav next">›</button>
 </section>
 
+
+<!-- SLIDER 2-->
+
+<section class="stack banner-slider">
+  <div class="slides">
+
+    <div class="slide active">
+      <img src="/assets/stack6.png" alt="">
+      <div class="slide-content">
+        <h2 class="slide-slogan">Saddles Made for Miles</h2>
+        <a href="/html/home.html" class="lux-btn">DISCOVER</a>
+      </div>
+    </div>
+
+    <div class="slide">
+      <img src="/assets/stack7.png" alt="">
+      <div class="slide-content">
+        <h2 class="slide-slogan">
+          Protection in Every Layer
+        </h2>
+        <a href="/html/home.html" class="lux-btn">SHOP BLANKETS</a>
+      </div>
+    </div>
+
+    <div class="slide">
+      <img src="/assets/stack8.jpg" alt="">
+      <div class="slide-content">
+        <h2 class="slide-slogan">Mark Daniel Saddlery</h2>
+        <a href="/html/home.html" class="lux-btn">EXPLORE</a>
+      </div>
+    </div>
+</div>
+  <button class="nav prev">‹</button>
+  <button class="nav next">›</button>
+</section>
+
 <!-- EDITORIAL ICONS -->
 
 <section class="editorial-stack">
@@ -116,7 +152,7 @@
     <img src="/assets/icon2.png" />
     <img src="/assets/icon3.png" />
     <img src="/assets/icon4.png" />
-     <img src="/assets/icon5.png" />
+    <img src="/assets/icon5.png" />
     <img src="/assets/icon6.png" />
   </div>
 
